add deploy workflow

--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -61,6 +61,8 @@ footer {
 }
 
 .footer-iconTop a {
+  position: relative;
+  bottom: 89px;
   display: inline-flex;
   justify-content: center;
   align-items: center;
